[2025-04-18 17:58 CEST] - Aggiornamento Persistenza Wallet: Modificato App.vue per nascondere la sezione UI del wallet esterno se walletStore.isUsingExternalWallet è false. Test locale conferma che dopo il login con preferenza 'internal', la sezione wallet è correttamente nascosta.
[2025-04-18 18:05 CEST] - Aggiornamento Persistenza Wallet: Creata route /settings, link in App.vue e componente SettingsView.vue. Implementata UI e logica frontend in SettingsView.vue per visualizzare stato wallet (interno/esterno) e switchare modalità tramite connectWallet/disconnectWallet dello store. Test locale UI OK.
[2025-04-18 21:01 CEST] - Aggiornamento Persistenza Wallet: Completata implementazione e test della persistenza della preferenza wallet. L'utente può cambiare modalità (Interno/Esterno) dalla pagina Impostazioni, la scelta viene salvata nel DB tramite API backend e viene caricata correttamente al login successivo, aggiornando lo stato e la UI del frontend come previsto.
[2025-04-18 21:40 CEST] - Aggiornamento SIWE & DB: Aggiunta colonna external_wallet_address (TEXT NULL UNIQUE) e reso password_hash NULLable nella tabella users del DB locale. Implementata e esportata funzione findOrCreateUserByAddress in userService.js per gestire lookup/creazione utenti basata su indirizzo esterno. Backend pronto per verifica SIWE.
[2025-04-18 22:18 CEST] - Rimozione Aggiornamento SIWE: Annullata l'implementazione di SIWE etc riportato i file e il progetto alle condizioni prima di Aggiornamento SIWE & DB.
[2025-04-18 22:28 CEST] - Bugfix Login: Risolto problema login standard non funzionante reinserendo la funzione handleLogin mancante nel componente LoginView.vue. Login username/password ora funzionante.