@@ -44,3 +44,4 @@ Ti ho fornito nuovamente le modifiche per App.vue (import store, uso store, UI w
 [2025-04-18 21:40 CEST] - Aggiornamento SIWE & DB: Aggiunta colonna external_wallet_address (TEXT NULL UNIQUE) e reso password_hash NULLable nella tabella users del DB locale. Implementata e esportata funzione findOrCreateUserByAddress in userService.js per gestire lookup/creazione utenti basata su indirizzo esterno. Backend pronto per verifica SIWE.
 [2025-04-18 22:18 CEST] - Rimozione Aggiornamento SIWE: Annullata l'implementazione di SIWE etc riportato i file e il progetto alle condizioni prima di Aggiornamento SIWE & DB.
 [2025-04-18 22:28 CEST] - Bugfix Login: Risolto problema login standard non funzionante reinserendo la funzione handleLogin mancante nel componente LoginView.vue. Login username/password ora funzionante.
+[2025-04-19 10:32 CEST] - Feature Creazione Eventi: Aggiunto ruolo admin (colonna `is_admin` su `users` DB) e middleware di autorizzazione (`adminAuthMiddleware.js`). Aggiornata API login per restituire stato admin.
